# g2labs-idf

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
cmake/: build.cmake  g2l-idf.cmake  test.cmake  utilities.cmake
cmake/toolchains/: arduino-uno-toolchain.cmake  arduinouno.toolchain.cmake  esp32-c6-toolchain.cmake  esp32-s3-toolchain.cmake  esp32c6.toolchain.cmake  esp32s3.toolchain.cmake  linux-toolchain.cmake  linux.toolchain.cmake  tests.toolchain.cmake
components/: CMakeLists.txt
components/adapters/: CMakeLists.txt
components/adapters/ssd1306-spi-gpio-adapter/: CMakeLists.txt
components/adapters/ssd1306-spi-gpio-adapter/source/: CMakeLists.txt  ssd1306-spi-gpo-adapter.c  ssd1306-spi-gpo-adapter.h
components/cli/: CMakeLists.txt
components/cli/source/: CMakeLists.txt  cli.c  cli.h
components/cli/tests/: CMakeLists.txt  test-cli.c
components/color-manipulation/: .gitignore  CMakeLists.txt  README.md
components/color-manipulation/source/: CMakeLists.txt  color-manipulation.c  color-manipulation.h
components/color-manipulation/tests/: CMakeLists.txt  test-color-manipulation.c
components/containers/: CMakeLists.txt
components/containers/source/: CMakeLists.txt
components/containers/tests/: CMakeLists.txt
components/debug/: CMakeLists.txt
components/devices/: CMakeLists.txt
components/divulge/: CMakeLists.txt
components/divulge/examples/: CMakeLists.txt
components/divulge/source/: CMakeLists.txt  divulge.c  (+4 more)
components/encodings/: CMakeLists.txt
components/event-handler/: CMakeLists.txt
components/firmware/: CMakeLists.txt
components/font/: CMakeLists.txt
components/font/source/: CMakeLists.txt  font.c  font.h
components/font/source/fonts/: CMakeLists.txt  font-24x32.c  font-3x5.c  font-4x6.c  font-5x7.c  font-6x8.c  font-8x8.c  fonts-used.h.in
components/g2l-delay/: CMakeLists.txt
components/g2l-fs/: CMakeLists.txt
components/g2l-gpio/: CMakeLists.txt
components/g2l-html-render/: CMakeLists.txt
components/g2l-log/: CMakeLists.txt
components/g2l-main/: CMakeLists.txt
components/g2l-mutex/: CMakeLists.txt
components/g2l-semaphore/: CMakeLists.txt
components/g2l-spi/: CMakeLists.txt
components/g2l-tcp/: CMakeLists.txt
components/g2l-uart/: CMakeLists.txt
components/g2l-wifi/: CMakeLists.txt
components/g2l-ws28xx/: CMakeLists.txt
components/g2str/: CMakeLists.txt
components/hal/: CMakeLists.txt
components/network/: CMakeLists.txt
components/os/: CMakeLists.txt
components/storage/: CMakeLists.txt
components/stream-server/: CMakeLists.txt
components/timer/: CMakeLists.txt
components/user-screen/: CMakeLists.txt
components/uuid/: CMakeLists.txt
examples/: CMakeLists.txt
examples/file-system-example/: CMakeLists.txt  main.c
examples/hello-world/: CMakeLists.txt  app_main.c  main.c
examples/mqtt-connect/: CMakeLists.txt  main.c
examples/storage/: CMakeLists.txt  main.c
examples/threads/: CMakeLists.txt  main.c
examples/wifi-connect/: CMakeLists.txt  main.c
examples/wifi-scan/: main.c
(+214 files in other folders)
